new BeanPropertyRowMapper<>(Person.class) - имеет в себе уже сделанные присваивания значений объекту типа:  person.setId(resultSet.getInt("id")); Сокращает код в разы

--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/people}" th:object="${person}">
+<form th:action="@{/people}" th:method="POST" th:object="${person}">
     <label for="name">Enter name: </label>
-    <input type="text" th:field="*{name}" id="name"/>
-    <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
+    <input id="name" th:field="*{name}" type="text"/>
+    <div style="color:red" th:errors="*{name}" th:if="${#fields.hasErrors('name')}">Name Error</div>
     <br/>
     <label for="age">Enter age: </label>
-    <input type="text" th:field="*{age}" id="age"/>
-    <div style="color:red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age Error</div>
+    <input id="age" th:field="*{age}" type="text"/>
+    <div style="color:red" th:errors="*{age}" th:if="${#fields.hasErrors('age')}">Age Error</div>
     <br/>
     <label for="email">Enter email: </label>
-    <input type="text" th:field="*{email}" id="email"/>
-    <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
+    <input id="email" th:field="*{email}" type="text"/>
+    <div style="color:red" th:errors="*{email}" th:if="${#fields.hasErrors('email')}">Email Error</div>
     <br/>
     <input type="submit" value="Create!"/>
 </form>
