--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -11,7 +11,7 @@
 
 <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
 
-<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
+<form th:action="@{/people/{id}(id=${person.getId()})}" th:method="DELETE">
     <input type="submit" value="Delete"/>
 </form>
 </body>
